[package]
name = "b0unds"
version = "0.0.1"
authors = ["DE SMET Enguerrand"]
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
oxyde = {git = 'https://github.com/dsmtE/oxyde' }

wgpu = "0.12"
winit = "0.26"

anyhow = "1"

nalgebra-glm = { version = "0.17", features = [ "convert-bytemuck" ] }
bytemuck = { version = "1.7", features = [ "derive" ] }

# logging
log = "0.4"
fern = {version = "0.6", features = [ "colored" ] }
chrono = "0.4"

#egui stuff
egui = "0.17"
epi = "0.17"

# Overriding repository URL to work with git submodules
[patch."https://github.com/dsmtE/oxyde"]
oxyde = { path = "crates/oxyde" }

[[bin]]
name = "b0unds"
path = "src/main.rs"
