[package]
name = "b0unds"
version = "0.0.1"
authors = ["DE SMET Enguerrand"]
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
oxyde = {git = 'https://github.com/dsmtE/oxyde' }

wgpu = "0.15"
winit = "0.28"

anyhow = "1"

nalgebra-glm = { version = "0.18", features = [ "convert-bytemuck" ] }
bytemuck = { version = "1.13", features = [ "derive" ] }

# logging
log = "0.4"
fern = {version = "0.6", features = [ "colored" ] }
chrono = "0.4"

#egui stuff
egui = "0.21"

# Overriding repository URL to work with git submodules
[patch."https://github.com/dsmtE/oxyde"]
oxyde = { path = "crates/oxyde" }

[[bin]]
name = "b0unds"
path = "src/main.rs"
